fix(Frontend): Update top spacing

--- a/frontend/app/components/_organisms/CreateInvoiceBar/CreateInvoiceBar.module.scss
+++ b/frontend/app/components/_organisms/CreateInvoiceBar/CreateInvoiceBar.module.scss
@@ -2,7 +2,8 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 10px;
+  margin-top: 15px;
 }
 
 .create_invoice_bar_container {
